--- a/docs/sequences.adoc
+++ b/docs/sequences.adoc
@@ -1,8 +1,8 @@
-= Clojure course: sequences
+= The sequence abstraction
 include::slide.attrs[]
 
 [state=title]
-== Data collections
+== The sequence abstraction
 include::{includedir}/intro.adoc[]
 
 
@@ -10,15 +10,14 @@ include::{includedir}/intro.adoc[]
 
 . Lists
 . Vectors
-
-Hidden topics
-
-* Apply
-* Sequences
-* Lazy sequences
-* List vs Vector
+. Sequences
 
 == Lists
+
+* The core of LISP: LISP stands for *LISt Processing*.
+* *Logically*, that's the only data structure we need
+* In terms of *performances*, it's not enough
+
 
 image::hello-list.jpg[]
 
@@ -54,83 +53,96 @@ And it works fine with nested lists
 '(1 2 ("a" "b" (1 2 4)))
 --
 
-=== Functions on lists
+=== Query on lists
 
 [.fragment]
 --
-The most natural manipulation on a list is to take the list without its first element
-[source.eval-clojure, clojure]
-(rest '(1 2 3 4 5))
---
-
-[.fragment]
---
-In order to get the first element of a list, use first
+Get the first element of a list
 [source.eval-clojure, clojure]
 (first '(1 2 3 4 5))
 --
+[.fragment]
+--
+Check if the list is empty
+[source.eval-clojure, clojure]
+(empty? '(1 2 3 4 5))
+--
+
+
+=== Removing the first element of a list
+[.fragment]
+--
+Create a *new* list without the first element
+[source.eval-clojure, clojure]
+(def a '(1 2 3 4 5))
+(def b (rest a))
+--
 
 [.fragment]
 --
-Lists are linked lists, therefore elements are prepended *efficiently* to the head of the list
+The new list is changed
 [source.eval-clojure, clojure]
-(cons 1 '(2 3))
+b
 --
 
 [.fragment]
 --
-You can count the elements of a list, but it's not efficient
+The original list is left unchanged
 [source.eval-clojure, clojure]
-(count '(1 2 3 4 5))
+a
 --
 
-=== Lists - Practice
 
-> Write a function that receives a list and returns its fifth element.
 
+
+=== Adding an element to a list
+
+
+[.fragment]
+--
+Create a *new* list with an element prepended
 [source.eval-clojure, clojure]
-(defn fifth [lst]
-;; Write your code here
-)
+(def c '(1 2 3 4 5))
+(def d (cons 0 c))
+--
+
+[.fragment]
+--
+The new list is changed
+[source.eval-clojure, clojure]
+d
+--
+
+[.fragment]
+--
+The original list is left unchanged
+[source.eval-clojure, clojure]
+c
+--
+
+
+=== Efficient immutable lists 
+
+[.fragment]
+--
+The implementation of `rest`
+
+image::diagrams/immutable-lists-rest.png[]
+--
 
 {bl}
-[source.eval-clojure, clojure]
-(assert (= (fifth '(1 2 3 4 5 6 7 8)) 5))
+[.fragment]
+--
+The implementation of `cons`
 
-=== Lists - Practice (2)
-
-> {challenge} Write a function that receives a number `n` and a list and returns its nth element. You'll need to use recursion.
-
-[source.eval-clojure, clojure]
-(defn nth-element [lst n])
-
-{bl}
-
-[source.eval-clojure, clojure]
-(assert (= (nth-element '(1 2 3 4 5 6 7 8 9 10 11) 10) 10))
-
-
-=== Lists - Practice (3)
-
-> {challenge} Write a function called `select-1-5-7` that receives a list and returns a list with the elements of the original list at positions 1, 5 and 7.
-
-You might use either your `nth-element` function or clojure `nth`.
-
-[source.eval-clojure, clojure]
-(defn select-1-5-7 [lst])
-
-{bl}
-
-[source.eval-clojure, clojure]
-(assert (= (select-1-5-7 (range 10)) '(0 4 6)))
+image::diagrams/immutable-list-cons.png[]
+--
 
 == Vectors
 
 *Vectors* are like *lists* but with *fast random access*.
 
-image::clojure-vectors.png[]
 
-The secrets of persistent data structures https://hypirion.com/musings/understanding-persistent-vector-pt-1[Part 1] and https://hypirion.com/musings/understanding-persistent-vector-pt-2[Part 2].
 
 === Vector creation
 
@@ -145,71 +157,55 @@ Vectors are created using `vector`
 
 [.fragment]
 --
-We can convert a list into a vector using `apply`
-[source.eval-clojure, clojure]
-(apply vector '(1 2 3 4 5))
---
-
-{bl}
-
-[.fragment]
---
 Nested vectors can be created using the literal `[]`
 [source.eval-clojure, clojure]
 (def a [1 2 3 4 "aa" [1 2] [1 2 3]])
 a
 --
 
-=== Vectors vs lists: performances
-
-[cols="2*", frame=none, grid=none]
-|===
-a| [.fragment]
---
-Let's create a very long list
-[source.eval-clojure, clojure]
-(def long-list (reverse
-(reverse (range 1e6))))
---
-
-a|[.fragment]
---
-And a long vector
-[source.eval-clojure, clojure]
-(def long-vec (vec long-list))
---
-|===
-
+=== Query on vectors
 
 [.fragment]
 --
-Let's compare the perfs
-[cols="2*", frame=none, grid=none]
-|===
-a|
+Random access
 [source.eval-clojure, clojure]
-----
-(time (nth long-list (dec 1e6)))
-----
+(nth ["a" "b" "c"] 2)
+--
 
-a|
+=== Modifying an entry in a vector
+
+[.fragment]
+--
+Create a *new* vector with a modified entry
 [source.eval-clojure, clojure]
-----
-(time (nth long-vec (dec 1e6)))
-----
-|===
+(def v [0 1 2 3 4])
+(def w (assoc v 2 200))
 --
 
 [.fragment]
 --
-{meditation} Why is `last` so slow on a vector?
+The new vector is changed
 [source.eval-clojure, clojure]
-(time (last long-vec))
+w
 --
+
+[.fragment]
+--
+The original vector is left unchanged
+[source.eval-clojure, clojure]
+v
+--
+
+=== Efficient immutable vectors 
+
+The secrets of persistent data structures https://hypirion.com/musings/understanding-persistent-vector-pt-1[Part 1] and https://hypirion.com/musings/understanding-persistent-vector-pt-2[Part 2].
+
+image::clojure-vectors.png[]
+
 === Vectors vs lists
 
 [.fragment]
-{meditation} Why do we need lists if vectors has better performances?
+{meditation} Why do we need lists if vectors has more features?
 
 {bl}
 
@@ -219,11 +215,21 @@ a|
 * Deep argument: When a list is enough why would we use a vector?
 
 
-=== The sequence abstraction
+== The sequence abstraction
 
+. `first`
+. `rest`
+. `empty?`
+. `cons`
+
+
+That's the foundation of the rich set of Clojure data manipulation functions: `map`, `filter`, `reduce`, `sort` ...
+
+
+=== The sequence abstraction in action
 [.fragment]
 --
-The sequence functions work on any collection: like with lists, you can access the first element with `first`
+The sequence functions work on any data collection
 [source.eval-clojure, clojure]
 (first [1 2 3 4 5])
 --
@@ -234,51 +240,114 @@ Be careful: `rest` always returns a sequence!
 [source.eval-clojure, clojure]
 (rest [1 2 3 4 5])
 --
+[.fragment]
+--
+Be careful: `cons` always returns a sequence!
+[source.eval-clojure, clojure]
+(cons 0 [1 2 3 4 5])
+--
+
+
+{bl}
+[.fragment]
+--
+[source.eval-clojure, clojure]
+(empty? [1 2 3 4 5])
+--
+
+
+=== Sequence vs. list
 
 [.fragment]
 --
-Notice that a sequence is not the same as a list
+Sequences are printed like lists
+[source.eval-clojure, clojure]
+(rest [1 2 3 4 5])
+--
+
+[.fragment]
+--
+A sequence is not the same as a list
 [source.eval-clojure, clojure]
 (= (type (rest [1 2 3 4 5])) (type '(2 3 4 5)))
 --
 
 [.fragment]
 --
-Equality check the values not the concretes sequence type
+Equality check the values, not the concrete sequence type
 
 [source.eval-clojure, clojure]
 (= (rest [1 2 3 4 5]) '(2 3 4 5))
 --
-
-Read more about sequences in https://clojure.org/reference/sequences[Clojure web site]
-
-=== Vectors - Practice
-
-> Write a function that receives a vector and converts it to a list
+[.fragment]
+--
+Equality check the values, not the concrete sequence type
 
 [source.eval-clojure, clojure]
-(defn ->list [vec])
+(= [1 2 3 4 5] '(1 2 3 4 5))
+--
+
+
+
+== Homework
+
+=== Sequences - Practice
+
+> Write a function that receives a sequence and returns its fifth element.
+
+[source.eval-clojure, clojure]
+(defn fifth [lst]
+;; Write your code here
+)
+
+{bl}
+[source.eval-clojure, clojure]
+(assert (= (fifth '(1 2 3 4 5 6 7 8)) 5))
+
+=== Sequences - Practice (2)
+
+> {challenge} Write a function that receives a number `n` and a sequence and returns its nth element. You'll need to use recursion.
+
+[source.eval-clojure, clojure]
+(defn nth-element [lst n])
 
 {bl}
 
 [source.eval-clojure, clojure]
-(assert (= (->list [1 2]) '(1 2)))
+(assert (= (nth-element '(1 2 3 4 5 6 7 8 9 10 11) 10) 10))
 
-=== Vectors - Practice (2)
 
-> Write a recursive function that receives a vector and a "thing" and returns `true` or `false` according to the presence of the "thing" in the vector
+=== Sequences - Practice (3)
 
-{meditation} Why such a function is not implemented in `clojure.core`?
+> {challenge} Write a function called `select-1-5-7` that receives a sequence and returns a sequence with the elements of the original sequence at positions 1, 5 and 7.
+
+You might use either your `nth-element` function or clojure `nth`.
 
 [source.eval-clojure, clojure]
-(defn present? [v thing])
+(defn select-1-5-7 [lst])
 
 {bl}
 
 [source.eval-clojure, clojure]
-(assert (= (present? [1 2 3] 1)
-           true))
+(assert (= (select-1-5-7 (range 10)) '(0 4 6)))
+
+
+=== Sequences - Practice (4)
+
+> {challenge} Write a function called `my-map` that receives a function and a sequence and returns a sequence made of the application of the function to the elements of the sequence.
+
+* You are allowed to use recursion.
+* You are not allowed to use functions from `clojure.core` like `map`
 
 [source.eval-clojure, clojure]
-(assert (= (present? [1 2 3] 18)
-           false))
+(defn my-map [f s])
+
+{bl}
+
+[source.eval-clojure, clojure]
+(assert (= (my-map inc [1 2 3]) '(2 3 4)))
+
+
+=== Read
+
+* Read more about sequences in https://clojure.org/reference/sequences[Clojure web site]
